style: fix meta spacing

--- a/app/components/media-card/media-card.css
+++ b/app/components/media-card/media-card.css
@@ -45,13 +45,13 @@
 .media-card dd {
   display: inline-flex;
   align-items: baseline;
-  gap: 1ch;
 }
 
 .media-card dd svg {
   display: inline-block;
   width: 0.9em;
   opacity: 0.75;
+  margin-inline-end: var(--meta-gap);
 }
 
 .media-card dd:not(:last-child)::after {
